# fastapi_todo

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_17_1602-38d7a110a84c_add_count_column_to_association_tab.py  2024_04_17_1610-a5860c1cfddb_add_notes_model.py  2024_04_17_1613-aa97271f0a74_add_tasks_model.py  2024_04_17_1726-ea704b8d6673_add_users_model.py  2024_04_18_1049-90d1b423d622_add_creation_date_column_to_all_models.py  2024_04_22_1715-7d07809753c8_add_unique_true_to_username_and_email_.py  2024_04_24_1642-512ba232dc2d_create_relationship_between_users_and_.py
api_v1/: __init__.py  crud_helper.py  mixins.py  types.py  utils.py
api_v1/models/: __init__.py  note.py  task.py
api_v1/notes/: __init__.py  crud.py  models.py  schemas.py  views.py
api_v1/tasks/: __init__.py  crud.py  schemas.py  views.py
core/: __init__.py  config.py
core/models/: mixins.py
users/: models.py
users/models/: user.py
