[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description = "FastAPI ToDo"
authors = ["Soslan Khutinaev"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_todo"}]

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.6.0"
anyio = "4.3.0"
click = "8.1.7"
fastapi = "0.110.1"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.7"
pydantic = "2.7.0"
pydantic-core = "2.18.1"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
sniffio = "1.3.1"
starlette = "0.37.2"
typing-extensions = "4.11.0"
uvicorn = "0.29.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
